--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@ PGPASSWORD="npg_Hyi0IMXk9Ccz"
 PGHOST="ep-lingering-resonance-a69gywfq.us-west-2.aws.neon.tech"
 PGPORT="5432"
 OPENAI_API_KEY=""
+PORT=5000
+NODE_ENV='development'
