--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,7 @@
       "use": "@vercel/node"
     },
     {
-      "src": "dist/client/**",
+      "src": "dist/client",
       "use": "@vercel/static"
     }
   ],
@@ -17,7 +17,7 @@
     },
     {
       "src": "/(.*)",
-      "dest": "/dist/client/index.html"
+      "dest": "/index.html"
     }
   ]
 }
