--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "tsx server/index.ts",
-    "build": "vite build && tsc -p tsconfig.server.json",
+    "build": "vite build && tsc -p tsconfig.server.json --module nodenext",
     "vercel-build": "npm run build",
     "start": "NODE_ENV=production node dist/index.js",
     "check": "tsc",
