--- a/vercel.json
+++ b/vercel.json
@@ -9,15 +9,13 @@
       }
     },
     {
-      "src": "dist/index.js",
+      "src": "api/index.ts",
       "use": "@vercel/node",
       "config": {
         "includeFiles": ["server/**"]
       }
     }
   ],
-  "buildCommand": "npm run build",
-  "outputDirectory": "dist",
   "routes": [
     {
       "src": "/api/(.*)",
