--- a/vercel.json
+++ b/vercel.json
@@ -12,7 +12,7 @@
       "src": "api/index.ts",
       "use": "@vercel/node",
       "config": {
-        "includeFiles": ["server/**"]
+        "includeFiles": ["server/**", "shared/**"]
       }
     }
   ],
