--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "tsx server/index.ts",
-    "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
+    "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist --external:@replit/vite-plugin-cartographer --external:@replit/vite-plugin-runtime-error-modal --external:@replit/vite-plugin-shadcn-theme-json",
     "vercel-build": "npm run build",
     "start": "NODE_ENV=production node dist/index.js",
     "check": "tsc",
