--- a/vercel.json
+++ b/vercel.json
@@ -22,12 +22,8 @@
       "dest": "/api/index.ts"
     },
     {
-      "src": "/(.*\\.(js|css|png|jpg|jpeg|gif|svg|ico|woff|woff2|ttf|eot|json|txt))",
-      "dest": "/dist/public/$1"
-    },
-    {
       "src": "/(.*)",
-      "dest": "/dist/public/index.html"
+      "dest": "/api/index.ts"
     }
   ],
   "env": {
