--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "embla-carousel-react": "^8.3.0",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
+    "firebase": "^12.0.0",
     "framer-motion": "^11.18.2",
     "input-otp": "^1.2.4",
     "isomorphic-dompurify": "^2.25.0",
