--- a/.env
+++ b/.env
@@ -7,3 +7,20 @@ PGPORT="5432"
 OPENAI_API_KEY=""
 PORT=5000
 NODE_ENV='development'
+
+# Firebase Configuration
+VITE_FIREBASE_API_KEY="AIzaSyCdRl6bWmUIEZcPBO_P0qp_pMEtBALTPUo"
+VITE_FIREBASE_AUTH_DOMAIN="career-os-1c775.firebaseapp.com"
+VITE_FIREBASE_PROJECT_ID="career-os-1c775"
+VITE_FIREBASE_STORAGE_BUCKET="career-os-1c775.firebasestorage.app"
+VITE_FIREBASE_MESSAGING_SENDER_ID="574505359001"
+VITE_FIREBASE_APP_ID="1:574505359001:web:37d46e1890e6c8c56f8a08"
+
+# Firebase Admin (Server-side)
+FIREBASE_PROJECT_ID="career-os-1c775"
+
+# Legacy OAuth Configuration (keeping for reference)
+GOOGLE_CLIENT_ID=""
+GOOGLE_CLIENT_SECRET=""
+GITHUB_CLIENT_ID=""
+GITHUB_CLIENT_SECRET=""
