--- a/package.json
+++ b/package.json
@@ -73,9 +73,11 @@
     "firebase": "^12.0.0",
     "firebase-admin": "^12.7.0",
     "framer-motion": "^11.18.2",
+    "html2canvas": "^1.4.1",
     "input-otp": "^1.2.4",
     "isomorphic-dompurify": "^2.25.0",
     "jsonwebtoken": "^9.0.2",
+    "jspdf": "^3.0.1",
     "lucide-react": "^0.453.0",
     "memoizee": "^0.4.17",
     "memorystore": "^1.6.7",
