--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ PGUSER="neondb_owner"
 PGPASSWORD="npg_Hyi0IMXk9Ccz"
 PGHOST="ep-lingering-resonance-a69gywfq.us-west-2.aws.neon.tech"
 PGPORT="5432"
-OPENAI_API_KEY=""
+OPENAI_API_KEY="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"
 PORT=5000
 NODE_ENV='development'
 
@@ -24,3 +24,12 @@ GOOGLE_CLIENT_ID=""
 GOOGLE_CLIENT_SECRET=""
 GITHUB_CLIENT_ID=""
 GITHUB_CLIENT_SECRET=""
+
+# Email Configuration
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_SECURE=false
+EMAIL_USER=gowtham5.gr15@gmail.com
+EMAIL_PASS=tfufgorvxztsljof
+EMAIL_FROM=noreply@careeros.com
+BASE_URL=http://career-os.vercel.app
